Add support for account type
